--- a/TrabalhoWeb/WebContent/style/style.css
+++ b/TrabalhoWeb/WebContent/style/style.css
@@ -1,1 +1,65 @@
 @CHARSET "ISO-8859-1";
+body {
+	background-image: url("../style/images/background.png");
+	margin: -10px;
+}
+
+.clear {
+	clear: both;
+}
+
+/* HEADER */
+.header {
+	width: 100%;
+	min-height: 200px;
+}
+.header .first {
+	background: -webkit-linear-gradient(white, #B3CDF0); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(white, #B3CDF0); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(white, #B3CDF0); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(white, #B3CDF0); /* Standard syntax (must be last) */
+    border-bottom: 5px solid #62A9FB;
+    width: 100%;
+    height: 200px;
+}
+.header .second {
+    width: 1024px;
+    min-height: 50px;
+    margin: 0 auto;
+}
+.second .button-container {
+    width: 450px;
+    min-height: 30px;
+    margin: 0 auto;
+}
+.button-container .button {
+    width: 100px;
+    background-color: #48783C;
+    height: 30px;
+    float: left;
+    margin-left: 10px;
+    box-shadow: -2px 0px 9px #888888;
+    transition: 0.3s;
+}
+.button-container .button:HOVER {
+    height: 50px;
+}
+.button-container .button h3 {
+    margin: 0;
+    color: white;
+    text-align: center;
+    line-height: 30px;
+    transition: 0.3s;
+}
+.button-container .button:hover h3 {
+    line-height: 50px;
+}
+/* END HEADER */
+
+/* BODY */
+.body {
+	width: 1024px;
+	min-height: 500px;
+	margin: 0 auto;
+}
+/* END BODY */
